# bluep

./: .all.txt.kate-swp  .gitignore  CLAUDE.md  Python.gitignore  README.md  all.txt  bluep_mcp_aiohttp.py  bluep_mcp_reverse_proxy.py  bluep_mcp_simple.py  bluep_mcp_standalone.py  bluep_mcp_standalone_auth.py  bluep_mcp_stdio_bridge.py  cert.pem  diff.txt  dump_all.py  dump_all.sh  external_mcp_services.json  index.html  install_service.py  key.pem  package-lock.json  package.json  pyproject.toml  run_bluep_windows.bat  server.js  set_totp_key.py  setup.py  version_sync.py  windows_setup.ps1
.github/workflows/: ci.yml
bluep/: __init__.py  auth.py  bluep.py  bluep_windows.py  cert_generator.py  cli_mcp.py  config.py  external_mcp_registry.py  mcp_client_proxy.py  mcp_service_manager.py  middleware.py  models.py  process_manager.py  process_resource.py  secure_config.py  session_manager.py  structured_logging.py  terminal_state.py  websocket_manager.py
bluep-mcp-client/: README.md  build_standalone.sh  setup.py
bluep-mcp-client/bluep_mcp_client/: __init__.py  cli.py  proxy.py
browser-extension/: background.js  content.js  manifest.json  popup.html  popup.js
browser-extension/native-helper/: bluep_mcp_bridge.py  com.bluep.mcp_bridge.json  install.sh
certs/: cert.pem
docs/: ARCHITECTURE_IMPROVEMENTS.md
mcp-services/: README.md
public/: index.html
src/: server.js
static/js/: crypto-utils.js
stubs/: qrcode.pyi
templates/: editor.html  login.html  mcp.html  mcp_proxy.html  setup.html  terminal.html
tests/: conftest.py  test_auth.py  test_bluep.py  test_integration.py  test_middleware.py  test_process_manager.py  test_security.py  test_session.py  test_websocket.py
