[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bluep"
version = "0.2.1"
authors = [
  { name="GlassOnTin", email="63980135+GlassOnTin@users.noreply.github.com" },
]
description = "A minimal real-time collaborative text editor"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pillow>=8.0.0",
    "websockets>=10.0",
]

[project.scripts]
bluep = "bluep.bluep:main"

[tool.hatch.build.targets.wheel]
packages = ["bluep"]
